--- a/templates/index.html
+++ b/templates/index.html
@@ -3,91 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Math Solver</title>
-<style>
-    * {
-text-align: center;
-    }
-body {
-    background-image: linear-gradient(to bottom right, black, #095875);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-}
-h1 {
-    color: white;
-    font-size: 70px;
-    text-align: center;
-    padding: 10px;
-    border-radius: 20px;
-}
-h2 {
-    color: white;
-}
-#broski {
-    max-width: fit-content;
-    margin-inline: auto;
-}
-.parent {
-  margin: 1rem;
-  padding: 2rem 2rem;
-  text-align: center;
-}
-.child {
-  display: inline-block;
-  padding: 1rem 1rem;
-  vertical-align: middle;
-  height: 100%;
-  width: 100%;
-}
-li {
-    font-size: 52px;
-    color: white;
-    text-align: center;
-    list-style-type: none;
-}
-button {
-    font-size: 40px;
-    font-family: Arial, Helvetica, sans-serif;
-    color: white;
-    background-color: #095875;
-    border-radius: 5px;
-    border-color: transparent;
-    width: 300px; 
-    display: inline-block;
-    text-align: center;
-    padding: 10px;
-    line-height: 40px;
-    border: 3px solid transparent;
-}
-.change_some_stuff {
-    font-size: 40px;
-    font-family: Arial, Helvetica, sans-serif;
-    color: white;
-    background-color: #095875;
-    border-radius: 5px;
-    border-color: transparent;
-    width: 300px; 
-    display: inline-block;
-    text-align: center;
-    padding: 10px;
-    line-height: 40px;
-    border: transparent solid 3px;
-    margin-right: 10px;
-} 
-button:hover, .change_some_stuff:hover {
-    cursor: pointer;
-    border: white solid 3px;
-}
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 
-#image-preview {
-    margin-top: 20px;
-    max-width: 500px;
-    margin-bottom: 20px;
-    display: none;
-}
-input[type="file"] {
-    display: none;
-}
-</style>
 </head>
 <body>
    <div id="broski"> <h1>Maths Solver</h1>
